--- a/week04/token_client/index.html
+++ b/week04/token_client/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div style="margin-bottom: 50;">
-        <h1 id="token-name">Token name: </h1>
-        <h2 id="token-symbol">Token symbol: </h1>
-        <h2 id="token-supply">Token supply: </h1>
+        <h1>Token name: <span id="token-name"></span></h1>
+        <h2>Token symbol: <span id="token-symbol"></span></h1>
+        <h2>Token supply: <span id="token-supply"></span></h1>
         <h2>My balance: <span id="my-balance">0</span></h1>
     </div>
 
